* Weird looking alternating background with some color schemes (#252)
* Buttons in math book expand side-window (#253)
* Removed appearance of modal message box after insertion of invalid
  expression. An auto-hiding label is shown instead.
* Huge numbers logarithms don't fail anymore (#289)
* Current result tip doesn't cover input box fo 50-digit precision anymore (#322)

Additions:
* Integer division '\' operator (#62)
* Binary logic AND and OR functions (#90)
* Bit shift '<<' and '>>' operators (#90)
* Settings to automatically clear variables and history on exit (#191)
* Result display font setting (#319)
* Euler number (constant e=2.718...) (#320)
* History dock is now selectable and copyable (#324)
* Power operators (superscript 0-9 digits) (#325)
* Syntax highlighting in result display
* Arabic translation

==============================================================================
SpeedCrunch 0.10.1
==============================================================================
Fixes:
* Keypad button "=" (#176)
* Incomplete math book link upon clicking (#177)
* Back and forward buttons have the opposite meaning in RTL (#185)
* Missing window update on radix character change
* Removed Slovenian language menu entry, since there is no such translation
  available
* Potential crashes caused by the math engine (#180)

Improvements:
* Better handling of math book translations with language codes that contain
  the country component and now correct behaviour defaulting to English when
  the system language (selected option) is not supported
* Updated translations

Additions:
* Basque, Catalan, and Simplified Chinese translations
* Mac OS X Universal Binary package (first time since version 0.7)

==============================================================================
SpeedCrunch 0.10
==============================================================================
Fixes:
* Loss of precision on variable saving
* Clobbering of 'ans' on radix change